# mpisa

./: Cargo.toml  Justfile  README.md  api.html  book.toml  booting.html  example.html  example.json  index.html  print.html  searchindex.js  searchindex.json
api/: aliases.js  search-index.js  source-files.js
api/ctor/: all.html  attr.ctor.html  attr.dtor.html  ctor.m.html  dtor.m.html  index.html
api/ghost/: all.html  attr.phantom.html  index.html  phantom.m.html
api/implementors/inventory/: trait.Collect.js
api/inventory/: Collect.t.html  all.html  index.html  iter.t.html  macro.collect.html  macro.submit.html  trait.Collect.html  type.iter.html
api/inventory_impl/: all.html  index.html
api/mpisa/: ConfigDevice.t.html  DevID.t.html  all.html  enum.ErrorKind.html  enum.MessageType.html  index.html  macro.register_device.html  register_device.m.html  sidebar-items.js  struct.Addr.html  struct.Config.html  struct.ConfigDevice.html  struct.DevID.html  struct.Message.html  struct.State.html  type.Error.html  type.Result.html
api/mpisa/devices/: DeserializeDevice.t.html  index.html  sidebar-items.js  struct.DeserializeDevice.html  trait.Device.html
api/mpisa/sim/: struct.State.html
api/mpisa/types/: MessageSize.t.html  enum.MessageKind.html  enum.MessageSize.html  enum.MessageType.html  index.html  sidebar-items.js  struct.Addr.html  (+2 more)
docs/: SUMMARY.md  api.md  booting.md  example.md
docs/tiny-risc/: README.md  isa.md
src/: lib.rs  main.rs  sim.rs  types.rs
src/devices/: dram.rs  macros.rs  mod.rs  rom.rs  util.rs
tiny-risc/: index.html  isa.html
(+49 files in other folders)
