[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "An experimental ISA simulator for a message-passing ISA."
documentation = "https://remexre.xyz/mpisa"
edition = "2018"
homepage = "https://remexre.xyz/mpisa"
license = "Apache-2.0/MIT"
name = "mpisa"
repository = "https://github.com/remexre/mpisa"
version = "0.1.0"

[dependencies]
derivative = "1.0.2"
derive_more = "0.14.0"
inventory = "0.1.3"
libremexre = { default-features = false, features = ["log"], version = "0.1.4" }
log = "0.4.6"
rayon = "1.0.3"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
stderrlog = "0.4.1"
structopt = "0.2.14"
